--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,8 @@ body{
   margin-top: 30px;
   flex-wrap: wrap;
   
-  margin-bottom: 200px;
+  margin-left: -30px;
+  margin-right: -30px;
   padding: 0;
 }
 
@@ -54,11 +55,12 @@ body{
   justify-content: center;
   position: relative;
   z-index: 1;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
-.movies-item + .movies-item{
-  margin-left: 60px;
-}
+
 
 .movie-cover{
   height: var(--img-height);
@@ -89,6 +91,10 @@ body{
 
 .movies-item:hover .movies-item-infos{
   transform:  translateX(-50%) scale(1);
+}
+
+.movies-item:hover{
+  z-index: 5;
 }
 
 .movies-info-heading{
